--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "XpenseTracker",
   "version": "1.0.0",
-  "description": "",
+  "description": "All in one solution to Track all your expenses",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "winston-mongodb": "^5.0.0"
   },
   "devDependencies": {
-    "jest": "^24.7.1"
+    "jest": "^24.7.1",
+    "nodemon": "^1.19.0"
   }
 }
